# beets-tidal-v1-meta

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
src/beetsplug/tidalv1meta/: __init__.py  auth.py  client.py  http_types.py  sources.py
tests/: conftest.py  test_auth.py  test_client.py  test_sources.py
